Java Hints SPI: avoid deprecated APIs.